--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -2,8 +2,8 @@
 
 %% Include all contents; each chapter should be a separate file.
 
-\include{thesis-introduction}
+\include{contents/thesis-introduction}
 
-\include{thesis-background}
+\include{contents/thesis-background}
 
-\include{thesis-conclusions}
+\include{contents/thesis-conclusions}
