--- a/thesis-title.tex
+++ b/thesis-title.tex
@@ -1,14 +1,19 @@
 % -*- mode:LaTex; mode:visual-line; mode:flyspell; fill-column:75-*-
 
-\title{\textbf{My great thesis}\\ \vspace{12pt}}
-\author{Me}
-\date{October 25, 1985}
-\Year{1985}
-\trnumber{CMU-RI-TR-YY-NN}
+% Author
+\author{\{Name and surname\}}
+\indexNumber{\{number\}}
 
-\committee{
-Distinguished professor, \emph{chair} \\
-Distinguished professor \\
-Distinguished professor \\
-Distinguished professor, \emph{Distinguished University}
-}
+% Unit name, field of study and specialization
+\institute{\{name of the unit\}} % the Instituties where the Diploma Thesis was prepared 
+\fieldOfStudy{\{name of the field of study\}}
+\specialisation{\{name of the specialisation\}}
+
+% Thesis title
+\title{\{title of the thesis\}}
+
+% Supervisor
+\supervisor{\{academic title/degree, name and surname\}}
+
+% Year
+\Year{\the\year}
