--- a/wut_thesis.tex
+++ b/wut_thesis.tex
@@ -5,7 +5,7 @@
 %% You should not need to mess around with this file unless you want to tinker.
 
 
-\documentclass[12pt]{src/ri_thesis}
+\documentclass[12pt]{src/wut_thesis}
 
 % All packages go in here
 \input{src/thesis-packages}
