--- a/thesis-preface.tex
+++ b/thesis-preface.tex
@@ -13,6 +13,10 @@
 \input{thesis-preface/thesis-abstract}
 \end{abstract}
 
+\begin{abstract}
+\input{thesis-preface/thesis-abstract-polish}
+\end{abstract}
+
 \begin{acknowledgments}
 \input{thesis-preface/thesis-acknowledgments}
 \end{acknowledgments}
