--- a/src/thesis-packages.tex
+++ b/src/thesis-packages.tex
@@ -34,7 +34,7 @@
 \usepackage{ctable}
 \usepackage{multirow}
 
-%\usepackage{todonotes}  % This package is slow to include.
+% \usepackage{todonotes}  % This package is slow to include.
 \usepackage{xspace} % macros with trailing spaces
 \usepackage{siunitx}
 \usepackage[raggedright]{titlesec}  % Prevent line breaks in section titles.
@@ -62,4 +62,15 @@
 
 % Enable capitalized references. Use this last.
 \usepackage[nameinlink]{cleveref}
+
+
+%%%%%%% Use font Arial %%%%%%%%%%%%
+% \usepackage{fontspec}
+% \setmainfont{Arial}
+
+% Nomenclature
+\usepackage[intoc]{nomencl}
+\makenomenclature
+
+\usepackage{etoolbox} % Group nomenclature, see thesis-maros.
 
