--- a/thesis-preface/thesis-nomenclature.tex
+++ b/thesis-preface/thesis-nomenclature.tex
@@ -1,6 +1,7 @@
 % -*- mode:LaTex; mode:visual-line; mode:flyspell; fill-column:75-*-
 
 \renewcommand{\nomname}{List of Symbols}
+% \setlength{\nomlabelwidth}{2cm} % Adjust spacing
 
 \renewcommand{\nompreamble}{The next list describes several symbols that will be later used within the body of the document\\}
 
